[project]
name = "susu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "diffusers==0.20.2",
    "einops>=0.8.1",
    "omegaconf>=2.3.0",
    "opencv-python==4.7.0.72",
    "pillow>=11.3.0",
    "pytorch-lightning==1.5.0",
    "requests>=2.32.4",
    "scikit-image",
    "scipy==1.10.0",
    "torch==2.0.0",
    "torchaudio==2.0.1",
    "torchvision==0.15.1",
    "tqdm>=4.67.1",
    "transformers==4.33.2",
    "huggingface-hub==0.25.0",
    "clean-fid>=0.1.35",
    "ipython>=8.37.0",
    "albumentations>=2.0.8",
    "matplotlib>=3.10.3",
    "open-clip-torch==2.19.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118" },
]
torchvision = [
    { index = "pytorch-cu118" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
